@@ -3,7 +3,7 @@ Sastre - Automation Tools for Cisco SD-WAN Powered by Viptela
 
 """
 __copyright__    = "Copyright (c) 2019 Cisco Systems, Inc. and/or its affiliates"
-__version__      = "0.33"
+__version__      = "0.34"
 __author__       = "Marcelo Reis"
 __email__        = "mareis@cisco.com"
 __url__          = "https://github.com/reismarcelo/sastre"
